--- a/2400033164-insemexam1.html
+++ b/2400033164-insemexam1.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <title>Kl Student Portal</title>
+    <meta name="viewport" content="width=1024">
+
+
     <style>
         body {
             text-align: center;
